# libwhisper-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  contributing.md  rustfmt.toml
.github/: dependabot.yml
src/: crypto.rs  errors.rs  frame.rs  lib.rs  session.rs
